@@ -219,11 +219,10 @@ typedef
          been interrupted by a signal. */
       UInt guest_IP_AT_SYSCALL;
 
-      UInt guest_SETC;
-
       /* Padding to make it have an 16-aligned size */
       UInt padding1;
       UInt padding2;
+      UInt padding3;
    }
    VexGuestX86State;
 
