@@ -26,6 +26,8 @@ than mailing the developers (or mailing lists) directly -- bugs that
 are not entered into bugzilla tend to get forgotten about or ignored.
 
 487055  memcheck/tests/x86-linux/scalar fails running in Docker
+511329  Darwin and FreeBSD: Move setting of carry flag out of
+        ML_(do_syscall_for_client_WRK)
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
